Excel-tool page updated. Extensions page updated.

--- a/src/app/front/components/excel-tool/excel-tool.component.html
+++ b/src/app/front/components/excel-tool/excel-tool.component.html
@@ -19,12 +19,15 @@
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
         <div class="mlbTopSectionWrap">
           <div class="mlbTopLft">
-            <h2 class="mlbTopLftHedin">The MLB Excel Optimizer</h2>
-            <p class="mlbTopLftPara">Pc Only. Does Not Work on a Mac</p>
-            <button type="button" class="dwnldBtn">Download</button>
+            <img src="../../../../assets/images/mlb_right_img.png" alt="" />
+            <div class="mlbTopLftTxt">
+              <h2 class="mlbTopLftHedin">The MLB Excel Optimizer : </h2>
+              <p class="mlbTopLftPara">Pc Only. Does Not Work on a Mac</p>
+            </div>
+
           </div>
           <div class="mlbTopRght">
-            <img src="../../../../assets/images/mlb_right_img.png" alt="" />
+            <button type="button" class="dwnldBtn">Download</button>
           </div>
 
         </div>
@@ -41,21 +44,21 @@
         <div class="mlbInfoWrap">
           <div class="mlbInfoTp">
             <h3 class="mlbInfoTpHedin">Please Note</h3>
-            <p class="mlbInfoTpPara">This version of the MLB Excel Optimizer only works on a PC (Windows, Ubuntu, Linux). The mac version will be coming soon. </p>
+            <p class="mlbInfoTpPara"><sup>"</sup>This version of the MLB Excel Optimizer only works on a PC (Windows, Ubuntu, Linux). The mac version will be coming soon.<sup>"</sup> </p>
           </div>
           <div class="mlbInfoMid">
             <div class="mlbInfoMidLft">
-              <h4 class="mlbInfoMidHedin">Installation </h4>
+              <h4 class="mlbInfoMidHedin"><span class="icnWrapperS"><img src="../../../../assets/images/installation_icn.png" alt="" class="img-responsive"></span>Installation </h4>
               <ul class="mlbInfoLst">
-                <li>Click the Download Button above and install the DF Sports Gods MLB Optimizer. You must have the PC version of Microsoft Excel installed on your computer.</li>
-                <li>Click on the verification email and set your password.</li>
+                <li><span>1</span>Click the Download Button above and install the DF Sports Gods MLB Optimizer. You must have the PC version of Microsoft Excel installed on your computer.</li>
+                <li><span>2</span>Click on the verification email and set your password.</li>
               </ul>
             </div>
             <div class="mlbInfoMidRght">
-              <h4 class="mlbInfoMidHedin">Using the Excel Optimizer</h4>
+              <h4 class="mlbInfoMidHedin"><span class="icnWrapperS"><img src="../../../../assets/images/exOptimizer_icn.png" alt="" class="img-responsive"></span>Using the Excel Optimizer</h4>
               <ul class="mlbInfoLst">
-                <li>Select "Get Started" on the main page</li>
-                <li>Enter your email you used when you signed up</li>
+                <li><span>1</span>Select "Get Started" on the main page</li>
+                <li><span>2</span>Enter your email you used when you signed up</li>
               </ul>
             </div>
           </div>
@@ -78,22 +81,25 @@
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
         <div class="mlbDescSectionWrap">
           <div class="mlbDescItm">
+            <img src="../../../../assets/images/mbl_desc_img1.png"  alt="" class="img-responsive mlbDescImg">
             <div class="mlbDescItmTp">
-              <a href="javascript:void(0)" class="mlbDescHedin">Batter Analysis Sheet</a>
+              <a href="javascript:void(0)" class="mlbDescHedin">Better Analysis Sheet</a>
               <p class="mlbDescPara">Based on a bat hand and pitcher throw hand stats, projection and salary we generate sheet where you can see all important stats for batter vs pitcher. Color coding is making easier to notice good and bad matchups for players:</p>
             </div>
-            <img src="../../../../assets/images/mbl_desc_img1.png"  alt="" class="img-responsive mlbDescImg">
+
           </div>
 
           <div class="mlbDescItm">
+            <img src="../../../../assets/images/mbl_desc_img2.png"  alt="" class="img-responsive mlbDescImg">
             <div class="mlbDescItmTp">
               <a href="javascript:void(0)" class="mlbDescHedin">Pitcher Analysis Sheet</a>
               <p class="mlbDescPara">Similar to Batter analysis sheet we are offering matchup analysis for pitchers. Opponent batter stats are batting stats of opponent team:</p>
             </div>
 
-            <img src="../../../../assets/images/mbl_desc_img2.png"  alt="" class="img-responsive mlbDescImg">
+
           </div>
-          <div class="mlbDescItm">
+          <div class="mlbDescItm mlbDescItm2">
+            <img src="../../../../assets/images/mlb_bot_img1.png"  alt="" class="img-responsive mlbDescImg">
             <div class="mlbDescItmTp">
               <a href="javascript:void(0)" class="mlbDescHedin">Multi Lineups Sheet</a>
               <p class="mlbDescPara">This is the sheet where you can generate your lineups. On this sheet you can set few options:</p>
@@ -105,13 +111,16 @@
               </ul>
             </div>
 
+
           </div>
-          <div class="mlbDescItm">
+          <div class="mlbDescItm mlbDescItm2">
+            <img src="../../../../assets/images/mlb_bot_img2.png"  alt="" class="img-responsive mlbDescImg">
             <div class="mlbDescItmTp">
               <a href="javascript:void(0)" class="mlbDescHedin">Fanduel/Drafktings Lineups Sheets</a>
               <p class="mlbDescPara">In these sheets you will get your generated lineups. You will notice that cell for player name is colored in some color, it means that player has some injury status assigned.</p>
               <p class="mlbDescPara">Also, if you want to export your lineups you can click on Export to csv and lineups will be exported in same folder as MLB_SpreadsheetTool_2017.xlsam.</p>
             </div>
+
 
           </div>
 
