--- a/src/app/front/components/header/front-header.component.html
+++ b/src/app/front/components/header/front-header.component.html
@@ -12,7 +12,9 @@
               <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">
                 <a routerLink="/excel-tool">Excel Tool<span class="sr-only">(current)</span></a>
               </li>
-              <li><a href="#">Extensions</a></li>
+              <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">
+                <a routerLink="/extensions">Extensions</a>
+              </li>
               <li><a href="#">Contest Analyzer</a></li>
               <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">
                 <a routerLink="/injuries">Injury Feeds</a>
@@ -84,16 +86,16 @@
                 </a>
               </li>
               <!--<li class="searchBtn">-->
-                <!--<a href="javascript:void(0)"><img src="../../../../assets/images/search_icn.png" alt="LOGO"-->
-                                                  <!--class="img-responsive"/></a>-->
-                <!--<div class="srchBar">-->
-                  <!--<div class="form-group">-->
-                    <!--<label class="srOnly">Search</label>-->
-                    <!--<input type="text" name="search" placeholder="Search">-->
-                  <!--</div>-->
-                  <!--<button type="button"><img src="../../../../assets/images/search_icn.png" alt="LOGO"-->
-                                             <!--class="img-responsive"/></button>-->
-                <!--</div>-->
+              <!--<a href="javascript:void(0)"><img src="../../../../assets/images/search_icn.png" alt="LOGO"-->
+              <!--class="img-responsive"/></a>-->
+              <!--<div class="srchBar">-->
+              <!--<div class="form-group">-->
+              <!--<label class="srOnly">Search</label>-->
+              <!--<input type="text" name="search" placeholder="Search">-->
+              <!--</div>-->
+              <!--<button type="button"><img src="../../../../assets/images/search_icn.png" alt="LOGO"-->
+              <!--class="img-responsive"/></button>-->
+              <!--</div>-->
               <!--</li>-->
             </ul>
           </div>
