--- a/src/app/front/components/login/login.component.html
+++ b/src/app/front/components/login/login.component.html
@@ -17,7 +17,7 @@
               </div>
               <div class="alert alert-warning fade in" *ngIf="isError">
                 {{errorMsg }}
-                <a routerLink="['verify','verify']" *ngIf="showVerifyLink"> Get verification link</a>
+                <a [routerLink]="['verify','verify']" *ngIf="showVerifyLink"> Get verification link</a>
               </div>
               <form [formGroup]="loginForm">
                 <div class="form-group">
@@ -43,7 +43,7 @@
                   <a routerLink="/forgot-password" class="frgtPsswd">Forgot my Password?</a>
                 </div>
 
-                <input type="button" value="Login" (click)="onSignInBtnClick()" class="formBtn"
+                <input type="submit" value="Login" (click)="onSignInBtnClick()" class="formBtn"
                        [disabled]="!loginForm.valid">
               </form>
               <p class="otherSigninPara">You can also <a href="javascript:void(0)" class="lred">sign up here or</a> sign
