Login functionality changes. Redirect to previous page after login functionality added. Logout button added in Homepage.

--- a/src/app/front/components/header/front-header.component.html
+++ b/src/app/front/components/header/front-header.component.html
@@ -85,6 +85,7 @@
                   Go to Dashboard
                 </a>
               </li>
+              <li class="loginBtn" *ngIf="isLoggedIn"><a (click)="btnLogoutClicked()">Logout</a></li>
               <!--<li class="searchBtn">-->
               <!--<a href="javascript:void(0)"><img src="../../../../assets/images/search_icn.png" alt="LOGO"-->
               <!--class="img-responsive"/></a>-->
