--- a/src/app/front/components/market-place/market-place.component.html
+++ b/src/app/front/components/market-place/market-place.component.html
@@ -63,10 +63,10 @@
                             </p>
                           </div>
                         </div>
-                        <!-- <div class="mPlaceBtnWrap">
-                           <p class="mPlacePrice">$119.00/season $35.00/month</p>
-                           <a href="marketplace_detail.html">View Details</a>
-                         </div>-->
+                         <div class="mPlaceBtnWrap">
+                           <p class="mPlacePrice">$0.99/day</p>
+                           <a (click)="btnCheckoutProviderClicked(provider)">Checkout</a>
+                         </div>
                       </div>
                     </div>
 
