Excel Module added in Admin panel

--- a/src/app/admin/components/left-bar/left-bar.component.html
+++ b/src/app/admin/components/left-bar/left-bar.component.html
@@ -26,6 +26,8 @@
       </li>
       <li [routerLinkActive]="['active']"><a [routerLink]="['/admin/coupons']" class="waves-effect waves-button"><span class="menu-icon glyphicon glyphicon-user"></span><p style="color: white;">Coupons</p></a>
       </li>
+      <li [routerLinkActive]="['active']"><a [routerLink]="['/admin/excel']" class="waves-effect waves-button"><span class="menu-icon glyphicon glyphicon-user"></span><p style="color: white;">Excel Tool</p></a>
+      </li>
       <!--<li [routerLinkActive]="['active']"><a [routerLink]="['/admin/contests']" class="waves-effect waves-button"><span class="menu-icon glyphicon glyphicon-user"></span><p>Contests</p></a>-->
       <!--</li>-->
     </ul>
